Fixed layout issue with sign up component

--- a/src/styles/components.domain.scss
+++ b/src/styles/components.domain.scss
@@ -98,7 +98,6 @@
                 }
 
                 dyn-signup {
-                    width:100%;
                     min-width: 280px;
                 }
 
